# tentacles-sdk

sdk/: idl.json  idl.ts  idls.json  index.ts  ixs.ts  main.ts  package.json  tsconfig.json  type.ts  x.ts
sdk-rust/: Cargo.toml
sdk-rust/src/: fetch.rs  main.rs
